# crud_api_rust

./: README.md
crud_api_template/: Cargo.toml
crud_api_template/src/: main.rs  mylib.rs  server.rs
crud_api_template/src/models/: user_schema.rs
crud_api_template/src/server_routes/: user_api.rs
